# TranformerNetwork

./: .gitignore  CMakeLists.txt  words.txt
include/: Attention.h  HelperFunctions.h  MLP.h  MLPLayer.h  NormalLayer.h
include/Attention/: Attention.h
include/MLP/: MLPLayer.h  MultiLayerMLP.h
include/Transformer/: TransformerBlock.h
src/: Attention.cpp  HelperFunctions.cpp  MLP.cpp  MLPLayer.cpp  NormalLayer.cpp  main.cpp
src/Attention/: Attention.cpp
src/MLP/: MLP.cpp  MLPLayer.cpp  MultiLayerMLP.cpp
src/Transformer/: TransformerBlock.cpp
